# react-native-vision-camera

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: FEATURE_REQUEST.yml
package/: package.json  tsconfig.build.json  tsconfig.json
package/harmony/: vision_camera.har
package/harmony/vision_camera/: BuildProfile.ets  Index.ets  oh-package-lock.json5  oh-package.json5  ts.ts
package/harmony/vision_camera/src/main/: module.json5
package/harmony/vision_camera/src/main/cpp/: CMakeLists.txt  EventEmitters.cpp  EventEmitters.h  States.cpp  States.h  VisionCameraModule.cpp  VisionCameraModule.h  VisionCameraPackage.h  VisionCameraViewComponentDescriptor.h  VisionCameraViewJSI-generated.cpp  VisionCameraViewJSI.h  VisionCameraViewJSIBinder.h
package/harmony/vision_camera/src/main/ets/: VisionCameraModule.ts  VisionCameraModulePackage.ts  VisionCameraView.ets  VisionCameraViewPackage.ts
package/harmony/vision_camera/src/main/ets/core/: CameraConfig.ts  CameraDeviceInfo.ts  CameraEnumBox.ts
package/harmony/vision_camera/src/main/ets/service/: CameraManager.ts  CameraSession.ts  ScanSession.ts
package/src/: NativeVisionCameraModule.ts  NativeVisionCameraView.ts  index.tsx
package/src/devices/: CameraDevices.ts  Templates.ts  getCameraDevice.ts  getCameraFormat.ts
package/src/hooks/: useCameraDevice.ts  useCameraDevices.ts  useCameraFormat.ts  useCameraPermission.ts  useCodeScanner.ts
package/src/types/: Camera.ts  CameraDevice.ts  CameraError.ts  CodeScanner.ts  Frame.ts  Orientation.ts  PhotoFile.ts  PixelFormat.ts  Point.ts  TemporaryFile.ts  VideoFile.ts
(+9 files in other folders)
